cmake_minimum_required(VERSION 3.1)
project(example)

if(STATIC_LIBRARY)
  add_library(Acore A1.cpp A2.cpp)
  target_compile_definitions(Acore PUBLIC -DSTATIC_LIBRARY)
  add_executable(Abin A.cpp)
  target_link_libraries(Abin Acore)
else()
  add_executable(Abin A.cpp)
endif()

if(STATIC_LIBRARY)
  add_library(Bcore B1.cpp B2.cpp)
  target_compile_definitions(Bcore PUBLIC -DSTATIC_LIBRARY)
  add_executable(Bbin B.cpp)
  target_link_libraries(Bbin Bcore)
else()
  add_executable(Bbin B.cpp)
endif()
